Bug 1215744 - Unnamed class expressions shouldn't get a name property. (r=arai)